update message page

--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -365,6 +365,7 @@
     position: relative;
     background-color: #fff;
     z-index: 777;
+	color: #258acf;
     @include is-sp {
         width: 100%;
     }
