update top-page header, sec1, sec2

--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -445,6 +445,7 @@
                 line-height: 48px;
                 font-weight: 400;
                 color: #fff;
+				font-family: "Bebas Neue", cursive;
             }
         }
 
@@ -489,7 +490,7 @@
     &-desc {
         text-align: center;
         background-color: #fff;
-        padding:20px 10px 18px;
+        padding:20px 5px 18px;
 		border:2px solid #f1f1f1;
         
 
