--- a/src/assets/scss/object/project/_footer.scss
+++ b/src/assets/scss/object/project/_footer.scss
@@ -62,7 +62,7 @@
             }
 
             a {
-                color: #fff;
+                color: #95C6E7;
                 letter-spacing: 0.29em;
                 @include font-line(13);
             }
@@ -70,7 +70,7 @@
     }
     .cntct-wrap {
         @include is-sp {
-            padding:0 20px !important;
+            padding:0 47.5px !important;
         }
     }
     .nav-footer {
@@ -102,7 +102,7 @@
 
              @include is-sp {
                 padding: 0;
-                margin-bottom:75px;
+                margin-bottom:37.5px;
              }
 
         }
@@ -158,7 +158,7 @@
                             position: absolute;
                             bottom:0;
                             left: 0;
-                            height: 1px;
+                            height: 2px;
                             width: 52px;
                             background-color: #fff;
         
@@ -319,7 +319,7 @@
                         position: absolute;
                         bottom:0;
                         left: 0;
-                        height: 1px;
+                        height: 2px;
                         width: 52px;
                         background-color: #fff;
     
@@ -481,7 +481,7 @@
                         position: absolute;
                         bottom:0;
                         left: 0;
-                        height: 1px;
+                        height: 2px;
                         width: 52px;
                         background-color: #fff;
 
@@ -635,7 +635,7 @@
                         position: absolute;
                         bottom:0;
                         left: 0;
-                        height: 1px;
+                        height: 2px;
                         width: 52px;
                         background-color: #fff;
 
@@ -747,7 +747,7 @@
         @include is-sp {
             flex-direction: column;
             align-items: center;
-            padding: 150px 0 0 0;
+            padding: 75px 0 0 0;
         }
 
         @include is-max(375px) {
@@ -773,12 +773,12 @@
         }
 
         @include is-sp {
-            padding: 75px 0 60px 0;
+            padding: 39px 0 95px 0;
         }
 
-        @include is-max(500px) {
-            padding: 37px 0 30px 0;
-        }
+        // @include is-max(500px) {
+        //     padding: 37px 0 30px 0;
+        // }
     }
 
 }
