--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -380,6 +380,7 @@
 
 					&-link {
 						position: relative;
+						cursor: pointer;
 						@include is-sp {
 							width: 100%;
 							line-height: 1.5;
@@ -414,6 +415,7 @@
 						&:hover {
 							.nav-links-ul-02-link-submenu {
 								display: block;
+								cursor: pointer;
 								@include is-sp {
 									display: none;
 								}
@@ -582,7 +584,7 @@
 			align-items: center;
 			position: absolute;
 			top: 3%;
-			left: 90px;
+			left: 45px;
 
 			@include is-sp {
 				display: block;
@@ -613,7 +615,7 @@
 				}
 
 				p {
-					margin-left: 25px;
+					margin-left: 12.5px;
 				}
 			}
 		}
