--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -1361,11 +1361,29 @@
 		background-color: #fff;
 
 		.clipPath {
-			clip-path: polygon(17% 9%, 80% 2%, 100% 0, 100% 100%, 85% 92%, 23% 98%, 0 100%, 0 0);
+			clip-path: polygon(
+				17% 9%,
+				80% 2%,
+				100% 0,
+				100% 100%,
+				85% 92%,
+				23% 98%,
+				0 100%,
+				0 0
+			);
 			background: linear-gradient(to right, #2579bf, #2593d5);
 
 			@include is-sp {
-				clip-path: polygon(17% 4%, 52% 2.3%, 100% 0%, 100% 100%, 85% 97%, 31% 99%, 0 100%, 0 0);
+				clip-path: polygon(
+					17% 4%,
+					52% 2.3%,
+					100% 0%,
+					100% 100%,
+					85% 97%,
+					31% 99%,
+					0 100%,
+					0 0
+				);
 			}
 		}
 
@@ -1470,6 +1488,10 @@
 				width: 115px;
 			}
 		}
+
+		.c-buttonCase {
+			color: #258acf;
+		}
 	}
 
 	.sect_6 {
@@ -1535,15 +1557,37 @@
 				width: 122px;
 			}
 		}
+
+		.c-buttonCase {
+			color: #258acf;
+		}
 	}
 
 	.sect_7 {
 		.clipPath {
-			clip-path: polygon(17% 9%, 80% 2%, 100% 0, 100% 100%, 85% 92%, 23% 98%, 0 100%, 0 0);
+			clip-path: polygon(
+				17% 9%,
+				80% 2%,
+				100% 0,
+				100% 100%,
+				85% 92%,
+				23% 98%,
+				0 100%,
+				0 0
+			);
 			background: linear-gradient(to right, #2579bf, #2593d5);
 
 			@include is-sp {
-				clip-path: polygon(16% 3%, 10% 2.3%, 100% 0%, 100% 100%, 85% 97%, 31% 99%, 0 100%, 0 0);
+				clip-path: polygon(
+					16% 3%,
+					10% 2.3%,
+					100% 0%,
+					100% 100%,
+					85% 97%,
+					31% 99%,
+					0 100%,
+					0 0
+				);
 			}
 		}
 
@@ -1576,7 +1620,7 @@
 						letter-spacing: 0.21em;
 						color: #fff;
 						font-family: century-gothic, sans-serif;
-						color: #95C6E7;
+						color: #95c6e7;
 
 						@include is-sp {
 							padding: 20px 0 26px 0;
@@ -1608,7 +1652,11 @@
 					left: 0%;
 					bottom: 27px;
 					padding: 8px 13px 16px 23px;
-					background: linear-gradient(100deg, rgba(114, 159, 223, 0.238831) 14%, #244d7e 100%);
+					background: linear-gradient(
+						100deg,
+						rgba(114, 159, 223, 0.238831) 14%,
+						#244d7e 100%
+					);
 					width: 77%;
 
 					@include is-max(890px) {
@@ -1697,7 +1745,7 @@
 						@include font-line(10, 20);
 						letter-spacing: 0.32em;
 						color: #95c6e7;
-						padding:9px 0 11px 0;
+						padding: 9px 0 11px 0;
 						@include is-sp {
 							display: none;
 						}
@@ -1740,7 +1788,6 @@
 				z-index: -4;
 				width: 176px;
 			}
-
 		}
 		.bg_9 {
 			position: absolute;
@@ -1762,8 +1809,12 @@
 				width: 115px;
 			}
 			@include is-max(375px) {
-				top:30%;
+				top: 30%;
 			}
+		}
+
+		.c-buttonCase {
+			color: #258acf;
 		}
 	}
 
@@ -1790,6 +1841,7 @@
 					@include is-sp {
 						@include font-line(12.5, 10);
 						letter-spacing: 0.21em;
+						padding-bottom: 15px;
 					}
 				}
 
@@ -1805,7 +1857,7 @@
 						letter-spacing: 0.15em;
 					}
 
-					@include is-max (389px) {
+					@include is-max(389px) {
 						font-size: 6vw;
 					}
 				}
@@ -1833,8 +1885,8 @@
 				&-cntnt {
 					display: flex;
 					padding: 30px 0 28px 15px;
-					border-bottom: 1px solid #D2D2D2;
-					border-top: 1px solid #101010;
+					border-bottom: 1px solid #d2d2d2;
+					border-top: 1px solid #d2d2d2;
 
 					@include is-sp {
 						padding: 0;
@@ -1846,8 +1898,7 @@
 						padding-right: 111px;
 
 						@include is-sp {
-							padding:34px 0 26.5px 0;
-
+							padding: 34px 0 26.5px 0;
 						}
 
 						p {
@@ -1869,7 +1920,7 @@
 						color: #333;
 
 						@include is-sp {
-							padding-bottom: 34.5px;
+							padding-bottom: 25px;
 						}
 						p {
 							font-size: 12px;
@@ -1885,6 +1936,10 @@
 					}
 					@include is-sp {
 						display: block;
+					}
+
+					&:nth-child(1), &:nth-child(2), &:nth-child(3) {
+						border-bottom: 0;
 					}
 				}
 			}
@@ -1902,7 +1957,7 @@
 		}
 		.bg_13 {
 			position: absolute;
-			top: 26.2%;
+			top: 23.2%;
 			left: 0%;
 			z-index: -1;
 
