changed: fix header sp navigation and footer links hover

--- a/src/assets/scss/object/component/_link.scss
+++ b/src/assets/scss/object/component/_link.scss
@@ -5,8 +5,8 @@
         transition: color 0.3s ease-out;
         color: #fff;
 
-        &:hover{
-            color: $color-primary;
-        }
+        // &:hover{
+        //     color: $color-primary;
+        // }
     }
 }
