--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -437,7 +437,6 @@
 						}
 						a {
 							letter-spacing: 0.54em;
-						
 						}
 
 						&-submenu {
@@ -474,7 +473,6 @@
 								}
 								a {
 									color: #fff;
-								
 								}
 							}
 						}
@@ -569,7 +567,7 @@
 		z-index: 2;
 
 		@include is-max(1101px) {
-			width: 100%;
+			width: 95%;
 		}
 
 		@include is-sp {
@@ -628,11 +626,7 @@
 			left: 0;
 			height: 380px;
 			width: 100vw;
-			background-image: linear-gradient(
-				to bottom,
-				rgba(255, 0, 0, 0),
-				rgba(37, 121, 191, 1)
-			);
+			background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(37, 121, 191, 1));
 			display: none;
 
 			@include is-sp {
@@ -656,8 +650,7 @@
 				// top: 10%;
 				// background: url(../../release/image/header/img-banner1-sp.png);
 				// width: 375px;
-				
-				
+
 				top: 10%;
 				background: url(../../release/image/header/img-banner1-sp.png);
 				background-repeat: no-repeat;
@@ -904,25 +897,31 @@
 		}
 
 		&-txt02 {
+			width: 93%;
+			display: flex;
+			justify-content: flex-end;
+			align-items: flex-start;
 			position: absolute;
-			top: 84px;
-			right: 9px;
+			top: 83px;
+			right: 0;
 			z-index: 3;
+			// background: red;
 
 			@include is-sp {
-				right: -4px;
+				width: 100%;
 			}
 
 			&-ver {
 				writing-mode: tb;
 				font-family: yu-mincho-pr6n, sans-serif;
-				@include font-line(30, 41);
+				@include font-line(30);
 				font-weight: 500;
 				letter-spacing: 0.3em;
 				color: #fff;
+				padding-right: 7px;
 
 				@include is-sp {
-					@include font-line(23.3, 64);
+					@include font-line(23.3);
 					opacity: 0.5;
 				}
 			}
