update banner text and sections text

--- a/src/assets/scss/object/project/_footer.scss
+++ b/src/assets/scss/object/project/_footer.scss
@@ -629,6 +629,9 @@
                         @include font-line(15, 64.5);
                         letter-spacing: 0.28em;
                     }
+                    @include is-max (376px) {
+                        white-space: nowrap;
+                    }
                     
                     &:before {
                         content: '';
