--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -218,6 +218,14 @@
 			padding: 20px 0;
 			line-height: 21px;
 			@include font-line(14);
+
+			@include is-max(780px) {
+				@include font-line(13);
+			}
+
+			@include is-max(500px) {
+				@include font-line(14);
+			}
 		}
 
 		&--sub {
@@ -227,31 +235,35 @@
 			font-weight: 500;
 			@include font-line(11);
 			line-height: 16.5px;
-			text-align: left;	
+			text-align: left;
 		}
 	}
 
 	.slick-slide {
-		opacity: 0.5;
-		.c-slider__item--ttl {
-			opacity: 0;
-		}
+		@include is-sp {
+			opacity: 0.5;
+			.c-slider__item--ttl {
+				opacity: 0;
+			}
 
-		.c-slider__item--sub {
-			opacity: 0;
+			.c-slider__item--sub {
+				opacity: 0;
+			}
 		}
 	}
 
 	.slick-slide.slick-active {
-		opacity: 1;
-		.c-slider__item--ttl {
+		@include is-sp {
 			opacity: 1;
-			transition: 0.5s;
-		}
+			.c-slider__item--ttl {
+				opacity: 1;
+				transition: 0.5s;
+			}
 
-		.c-slider__item--sub {
-			opacity: 1;
-			transition: 0.5s;
+			.c-slider__item--sub {
+				opacity: 1;
+				transition: 0.5s;
+			}
 		}
 	}
 }
